--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,36 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  display: grid;
+  grid-template-areas:
+    "header header header"
+    "content content sidebar"
+    "footer footer footer";
+  background-color: #eee;
+  min-height: 100vh;
+  grid-gap: 1rem;
+  grid-template-columns: calc(20vw - 3rem) 40vw 40vw;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  min-height: 10vmin;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  grid-area: header;
+}
+
+.App-nav {
+  grid-area: sidebar;
+}
+
+.App-body {
+  grid-area: content;
+  position: relative;
+}
+
+.App-footer {
+  grid-area: footer;
 }
 
 .App-link {
